# ECT_OT_UDVIKLING

./: .gitignore
br_rcp/: sdkconfig  sdkconfig.old
nrf_sed/nrf54l15udp/: CMakeLists.txt  prj.conf
nrf_sed/nrf54l15udp/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
nrf_sed/nrf54l15udp/include/: adc.h  alarm.h  alarm_test.h  fire.h  network.h  udp.h  usb_console.h
nrf_sed/nrf54l15udp/src/: adc.c  alarm.c  fire.c  main.c  network.c  udp.c  usb_console.c
ot_br_wifi/basic_thread_border_router/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
ot_br_wifi/basic_thread_border_router/main/: CMakeLists.txt  esp_ot_br.c  idf_component.yml
ot_br_wifi/basic_thread_border_router/server_certs/: prvtkey.pem  server.csr  servercert.pem
ot_br_wifi/components/esp_ot_br_server/: CMakeLists.txt
ot_br_wifi/components/esp_ot_br_server/frontend/: device.html  index.html
ot_br_wifi/components/esp_ot_br_server/frontend/static/: style.css
ot_br_wifi/components/esp_ot_br_server/include/: esp_br_web.h  udp_br_func.h
ot_br_wifi/components/esp_ot_br_server/src/: esp_br_web.c  udp_br_func.c
